--- a/hungryhawk/pom.xml
+++ b/hungryhawk/pom.xml
@@ -2,12 +2,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
-  <groupId>net.timandersen</groupId>
+  <groupId>org.studentloan</groupId>
   <artifactId>hungryhawk</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>hungryhawk Maven Webapp</name>
-  <url>http://maven.apache.org</url>
 
   <properties>
     <spring.version>3.0.5.RELEASE</spring.version>
