--- a/hungryhawk/src/main/resources/config.properties
+++ b/hungryhawk/src/main/resources/config.properties
@@ -1,7 +1,10 @@
-#database.driver=com.mysql.jdbc.Driver
-#database.url=jdbc:mysql://localhost:3306/customer_dev?autoreconnect=true
-#database.username=admin
-#database.password=p@ssw0rd
+############ SQL Server ############
+#database.driver=net.sourceforge.jtds.jdbc.Driver
+#database.url=jdbc:jtds:sqlserver://DWDBSQL001;instance=TelecomDev;databaseName=Pair09_DialerData_POD;SendStringParametersAsUnicode=false;ssl=require;useNTLMv2=true;domain=ISLLCNETS;
+#database.username=
+#database.password=
+
+############ h2 ############
 database.driver=org.h2.Driver
 database.url=jdbc:h2:~/test;AUTO_SERVER=TRUE
 database.username=sa
