--- a/hungryhawk/pom.xml
+++ b/hungryhawk/pom.xml
@@ -3,7 +3,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.studentloan</groupId>
-    <artifactId>hungryhawk</artifactId>
+    <artifactId>exampleapp</artifactId>
     <packaging>war</packaging>
     <version>1.0-SNAPSHOT</version>
 
@@ -62,8 +62,7 @@
         <dependency>
             <groupId>commons-dbcp</groupId>
             <artifactId>commons-dbcp</artifactId>
-            <version>1.2.2</version>
-            <scope>runtime</scope>
+            <version>1.4</version>
         </dependency>
         <dependency>
             <groupId>com.h2database</groupId>
@@ -112,12 +111,13 @@
             <groupId>com.googlecode.flyway</groupId>
             <artifactId>flyway-core</artifactId>
             <version>2.0.3</version>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
 
     <build>
-        <finalName>hungryhawk</finalName>
+        <finalName>exampleapp</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
