--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     </properties>
 
     <modules>
+        <module>config</module>
         <module>sql</module>
         <module>web</module>
     </modules>
