marked config module as provided

--- a/web/pom.xml
+++ b/web/pom.xml
@@ -16,6 +16,7 @@
             <groupId>org.studentloan</groupId>
             <artifactId>exampleapp-config</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
@@ -228,6 +229,13 @@
                         </goals>
                     </execution>
                 </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.studentloan</groupId>
+                        <artifactId>exampleapp-config</artifactId>
+                        <version>1.0-SNAPSHOT</version>
+                    </dependency>
+                </dependencies>
             </plugin>
         </plugins>
     </build>
