--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -101,6 +101,21 @@
                 <version>4.11</version>
             </dependency>
             <dependency>
+                <groupId>org.fitnesse</groupId>
+                <artifactId>fitnesse</artifactId>
+                <version>20130531</version>
+            </dependency>
+            <dependency>
+                <groupId>org.fitnesse</groupId>
+                <artifactId>fitlibrary</artifactId>
+                <version>20080812</version>
+            </dependency>
+            <dependency>
+                <groupId>net.sf.dbfit</groupId>
+                <artifactId>dbfit</artifactId>
+                <version>1.1.2.2</version>
+            </dependency>
+            <dependency>
                 <groupId>org.mockito</groupId>
                 <artifactId>mockito-all</artifactId>
                 <version>1.9.5</version>
