--- a/config/pom.xml
+++ b/config/pom.xml
@@ -3,14 +3,14 @@
 
     <parent>
         <groupId>net.timandersen</groupId>
-        <artifactId>exampleapp-parent</artifactId>
+        <artifactId>rafl-parent</artifactId>
         <version>1.0-SNAPSHOT</version>
         <relativePath>../parent/pom.xml</relativePath>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>net.timandersen</groupId>
-    <artifactId>exampleapp-config</artifactId>
+    <artifactId>rafl-config</artifactId>
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
 
