--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -3,7 +3,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>net.timandersen</groupId>
-    <artifactId>exampleapp-parent</artifactId>
+    <artifactId>rafl-parent</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
 
@@ -17,7 +17,7 @@
         <dependencies>
             <dependency>
                 <groupId>net.timandersen</groupId>
-                <artifactId>exampleapp-config</artifactId>
+                <artifactId>rafl-config</artifactId>
                 <version>1.0-SNAPSHOT</version>
             </dependency>
             <dependency>
@@ -123,7 +123,7 @@
             <dependency>
                 <groupId>com.googlecode.flyway</groupId>
                 <artifactId>flyway-core</artifactId>
-                <version>2.0.3</version>
+                <version>2.3</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -152,8 +152,8 @@
                 </plugin>
                 <plugin>
                     <groupId>org.mortbay.jetty</groupId>
-                    <artifactId>maven-jetty-plugin</artifactId>
-                    <version>6.1.22</version>
+                    <artifactId>jetty-maven-plugin</artifactId>
+                    <version>8.1.12.v20130726</version>
                 </plugin>
             </plugins>
         </pluginManagement>
