--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>net.timandersen</groupId>
-    <artifactId>example-app-aggregate</artifactId>
-    <name>Example App Aggregate</name>
+    <artifactId>rafl-aggregate</artifactId>
+    <name>rafl aggregate</name>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
