added EnvironmentVariablePropertyPlaceholderConfigurer and used it to re-initialize log4j with properties'

--- a/web/pom.xml
+++ b/web/pom.xml
@@ -83,6 +83,10 @@
             <artifactId>slf4j-api</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
