--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -125,6 +125,12 @@
                 <groupId>net.sf.dbfit</groupId>
                 <artifactId>dbfit</artifactId>
                 <version>1.1.2.2</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.slf4j</groupId>
+                        <artifactId>slf4j-nop</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <dependency>
                 <groupId>org.mockito</groupId>
