--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -109,7 +109,7 @@
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
-                <version>4.11</version>
+                <version>4.12</version>
             </dependency>
             <dependency>
                 <groupId>org.fitnesse</groupId>
@@ -175,4 +175,11 @@
             </plugins>
         </pluginManagement>
     </build>
+
+    <scm>
+        <url>https://github.com/timander/rafl</url>
+        <connection>scm:git:git://github.com/timander/rafl.git</connection>
+        <developerConnection>scm:git:git@github.com:timander/rafl.git</developerConnection>
+    </scm>
+
 </project>
