--- a/web/pom.xml
+++ b/web/pom.xml
@@ -120,6 +120,25 @@
     </dependencies>
 
     <build>
+        <!--populates the buildNumber in the version config-->
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+                <includes>
+                    <include>**/version-context.xml</include>
+                </includes>
+            </resource>
+            <!--includes all other resources-->
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>false</filtering>
+                <excludes>
+                    <exclude>**/version-context.xml</exclude>
+                </excludes>
+            </resource>
+        </resources>
+
         <finalName>rafl</finalName>
         <plugins>
             <plugin>
@@ -241,11 +260,24 @@
                         <version>1.0-SNAPSHOT</version>
                     </dependency>
                     <!--<dependency>-->
-                        <!--<groupId>org.apache.tomcat</groupId>-->
-                        <!--<artifactId>tomcat-jasper</artifactId>-->
-                        <!--<version>8.0.3</version>-->
+                    <!--<groupId>org.apache.tomcat</groupId>-->
+                    <!--<artifactId>tomcat-jasper</artifactId>-->
+                    <!--<version>8.0.3</version>-->
                     <!--</dependency>-->
                 </dependencies>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>buildnumber-maven-plugin</artifactId>
+                <version>1.3</version>
+                <executions>
+                    <execution>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>create</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
